Material: fix assertion failure when quickly changing TextField's focus

Focus changes can happen before the focus in/out animations finish. In
that case, stop the animation, which will eventually delete it.
Until it's deleted, we clear the pointer so that our asserts don't fail
for the wrong reason.

Fixes: QTBUG-118889
Pick-to: 6.6 6.7
Change-Id: I6398805c006dadac71e168126c7a387357d5d2b0
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>