src/quickcontrols/material/impl/qquickmaterialplaceholdertext.cpp
@@ -231,8 +231,14 @@ void QQuickMaterialPlaceholderText::adjustTransformOrigin()
 
 void QQuickMaterialPlaceholderText::controlGotActiveFocus()
 {
-    if (m_focusOutAnimation)
+    if (m_focusOutAnimation) {
+        // Focus changes can happen before the animations finish.
+        // In that case, stop the animation, which will eventually delete it.
+        // Until it's deleted, we clear the pointer so that our asserts don't fail
+        // for the wrong reason.
         m_focusOutAnimation->stop();
+        m_focusOutAnimation.clear();
+    }
 
     Q_ASSERT(!m_focusInAnimation);
     if (shouldAnimate()) {
@@ -260,6 +266,11 @@ void QQuickMaterialPlaceholderText::controlGotActiveFocus()
 
 void QQuickMaterialPlaceholderText::controlLostActiveFocus()
 {
+    if (m_focusInAnimation) {
+        m_focusInAnimation->stop();
+        m_focusInAnimation.clear();
+    }
+
     Q_ASSERT(!m_focusOutAnimation);
     if (shouldAnimate()) {
         m_focusOutAnimation = new QParallelAnimationGroup(this);
